--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: cloud-native-example
-          image: docker.io/cjrutherford/cloud-native-example:latest
+          image: cjrutherford/cloud-native-example:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 7880
@@ -24,6 +24,6 @@ spec:
             - name: KAFKA_TOPIC
               value: "orders"
             - name: KAFKA_BROKER_ADDRESS
-              value: "kafka-broker"
+              value: "kafka"
             - name: KAFKA_BROKER_PORT
               value: "9092"
