--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,10 +2,15 @@ name: Build - Push to Docker Hub
 on:
   push:
     branches: [main]
+permissions:
+  contents: write
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Get Short Sha
+        id: slug
+        run: echo "SHORT_SHA=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_OUTPUT
       - name: Check out the repository
         uses: actions/checkout@v3
       - name: Log in to Docker Hub
@@ -18,4 +23,17 @@ jobs:
         with:
           context: .
           push: true
-          tags: cjrutherford/cloud-native-example:latest
+          tags: |
+            cjrutherford/cloud-native-example:latest
+            cjrutherford/cloud-native-example:${{ steps.slug.outputs.SHORT_SHA }}
+      - name: Update Deployment Tag
+        run: |
+          sed -i "s|cjrutherford/cloud-native-example:latest|cjrutherford/cloud-native-example:${{ steps.slug.outputs.SHORT_SHA }}|g" k8s/deployment.yaml
+          cat k8s/deployment.yaml
+      - name: Commit and push changes
+        run: |
+          git config --global user.name "GitHub Actions[bot]"
+          git config --global user.email "actions[bot]@github.com"
+          git add k8s/deployment.yaml
+          git commit -m "Update deployment image tag to ${{ steps.slug.outputs.SHORT_SHA }}"
+          git push origin main
