--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -24,6 +24,6 @@ spec:
             - name: KAFKA_TOPIC
               value: "orders"
             - name: KAFKA_BROKER_ADDRESS
-              value: "kafka"
+              value: "kafka-broker.kafka"
             - name: KAFKA_BROKER_PORT
               value: "9092"
